# HRAP_Source

./: .gitignore  README.md
HRAP - Matlab/: HRAP.mlapp  HRAP.prj  release_notes.txt
HRAP - Matlab/HRAP/: PackagingLog.html
HRAP - Matlab/core/: sim_iteration.m  sim_loop.m
HRAP - Matlab/motor_configs/: example_98mm.mat
HRAP - Matlab/propellant_configs/: ABS.mat  ET-Paraffin-FuelMaterial  HTPB.mat  Metalized_Plastisol.mat
HRAP - Matlab/util/: chamber.m  comb.m  interp2x.m  mass.m  shift_OF.m  (+1 more)
HRAP - Python/: .gitignore  README.md  pyproject.toml
HRAP - Python/HRAP/: chamber.py  core.py  grain.py  nozzle.py  sat_nos.py  tank.py  units.py
HRAP - Python/decks/: nitrous_plastic.py  nitrous_plastic_cmd.py
HRAP - Python/examples/: Arbitrary_Port_Nos_Paraffin.py  compare_legacy.py  lox_plastisol_star.py  nitrous_hybrid_gui.py  nitrous_plastic_cmd.py  nitrous_plastisol.py
HRAP - Python/hrap/: chamber.py  chem.py  core.py  fluid.py  grain.py  hybrid_fire_7_26_23.csv  nozzle.py  old_chem.py  sat_coolprop.py  sat_nos.py  sdf.py  tank.py  tank_super.py  units.py
HRAP - Python/hrap/examples/: diff_nte_evap.py  lox_plastisol.py  nitrous_abs_star.py  nitrous_compare.py  nitrous_hybrid_gui.py  nitrous_plastic_cmd.py  nitrous_plastisol.py  sat_nte_evap.py  star_cmd.py
HRAP - Python/hrap/gui/: hrap.py  main.py  themes.py
HRAP - Python/hrap/resources/fonts/: BubblegumSans_OFL.txt
HRAP - Python/hrap/resources/propellant_configs/: HDPE.mat  Paraffin.mat  Sorbitol.mat
HRAP - Python/hrap_python/: README.md  appcode.m  demo.py
HRAP - Python/hrap_python/api/: core.py  models.py  sim.py
HRAP - Python/hrap_python/propellants/: Paraffin.npz  convert.py
HRAP - Python/hrap_python/test/: test_chamber.py  test_comb.py  test_const_OF.py  test_nox.py  test_nozzle.py  test_shift_OF.py  test_tank.py
HRAP - Python/hrap_python/util/: nox.py  units.py
HRAP - Python/python/components/: injector.py  mass.py  nozzle.py  ox_tank.py  propellant.py  sim_config.py
HRAP - Python/python/util/: helpers.py
HRAP - Python/src/dgjax.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
HRAP - Python/src/hrap/: chamber.py  grain.py  nozzle.py
HRAP - Python/src/hrap/examples/: nitrous_hybrid_gui.py  nitrous_plastic_cmd.py
HRAP - v1.04 - Matlab/: HRAP.prj  HRAP_1.prj  HRAP_2022_08_10.mlapp  README.md  release_notes.txt
HRAP - v1.05 - Matlab/: HRAP_2023_07_14.mlapp
propellant_configs/: ABS.mat  propellant_template.m  read_me.txt
(+18 files in other folders)
