[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hrap"
version = "0.0.1"

# dynamic = ["version"]
dependencies = [
    "jax",
    "jaxlib",
    "numpy",
	"scipy",
	"dearpygui",
]

requires-python = ">= 3.10"

authors = [
    {name = "Drew Nickel"},
    {name = "Thomas Scott"},
]

description = "HRAP is a versatile tool for simulation of hybrid rocket engines."

[project.urls]
Homepage = "https://github.com/rnickel1/HRAP_Source"

[project.scripts]
hrap = "hrap.examples.nitrous_hybrid_gui:main"
#__main__ = "hrap.examples.nitrous_hybrid_gui:main"
