[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = ["hrap/gui/frontend/node_modules"] # TODO: want to include dist but remove everything else, dist needs to be at higher level
#[tool.setuptools]
#packages = ["hrap", "hrap.gui", "hrap.resources", "hrap.resources.fonts", "hrap.resources.fonts", "hrap.resources.propellant_config", "hrap.resources.validation"]

[project]
name = "hrap"
version = "0.1.4"

# dynamic = ["version"]
# TODO: option that depends on jax[gpu] for linux
dependencies = [
    "jax",
    "jaxlib",
    "numpy",
	"scipy",
	"dearpygui",
	"dearpygui_ext",
	"scikit-image",
	"coolprop",
	"interpax",
]

requires-python = ">= 3.10"

authors = [
    {name = "Drew Nickel"},
    {name = "Thomas A. Scott"},
]

description = "HRAP is a versatile tool for simulation of hybrid rocket engines."

[project.urls]
Homepage = "https://github.com/rnickel1/HRAP_Source"

[project.scripts]
hrap = "hrap.gui.hrap:main"
#__main__ = "hrap.examples.nitrous_hybrid_gui:main"
